app-manifests/base/_dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-dashboard-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    kubernetes.io/ingress.class: nginx-private
spec:
  rules:
    - host: k8s-dashboard-demo-web-dev.squantumengine.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 80
  tls:
  - hosts: 
    - k8s-dashboard-demo-web-dev.squantumengine.com
    secretName: k8s-demo-web-tls-secret
